style.css
@keyframes fade-in {
	0% {opacity: 0}
	100% {opacity: 1}
}
img {
	text-decoration: none;
	border-radius: 3rem;
}
img.slide{
	display: block;
    margin-left: auto;
    margin-right: auto;
    height: 40vh;
    width: auto;
    border-radius: 4px;
   	animation-name: fade-in;
   	animation-duration: 1s;
}
body {
    background-color: #696969;
    animation-name: fade-in;
    animation-duration: 2s;
}
p {
	font-family: 'Roboto', sans-serif;
	color: white;
	text-align: center;
}
#description {
	margin: auto;
    width: 340px;
    padding: 10px;
    border: 5px; 
}
#links {
	margin: auto;
    width: 300px;
    padding: 10px;
    border: 5px; 
}
#slideshow {
	margin: auto;
	width: 75vw;
	height: 40vh;
    padding: 10px;
    border: 5px; 
    align-content: center;
    text-align: center;
    overflow: hidden;
}
#buttons {
	margin: auto;
    padding: 10px;
    border: 5px; 
    align-content: center;
    text-align: center;
}
button {
	border:none;
	display:inline-block;
	padding:8px 16px;
	vertical-align:middle;
	overflow:hidden;
	text-decoration:none;
	color:inherit;
	background-color:white;
	text-align:center;
	cursor:pointer;
	white-space:nowrap;
	border-radius: 4px;
}
div {
	margin: auto;
    width: 220px;
    padding: 10px;
    border: 5px; 
}
header {
	background: transparent;
	margin-top: 20vh;
    height: 20%;
    display: block;
}
h3 {
	font-family: 'Montserrat', sans-serif;
	text-align: center;
	color: white;
}
a {
	color: white;
	text-decoration: none;
}
a:hover{
	text-decoration: none;
}
a:any-link {
  text-decoration: none;
}
a:-webkit-any-link {
  text-decoration: none;
}

